add filter price

--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -108,7 +108,7 @@
 			<!-- ********************************************************************
 				$ PRODUCTS
 			********************************************************************* -->
-			<section class="products" data-columns>
+			<!-- <section class="products" data-columns>
 				{% for product in products %}
 					<article class="product">
 						<div class="product-image">
@@ -128,7 +128,338 @@
 						</div>
 					</article>
 				{% endfor %}
+			</section> -->
+			<section class="products">
+				{% for product in products %}
+				<div class="product-wrapper">					
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product1.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">{{product.name}}</div>
+							<div class="price">${{product.price}}</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> <span>{{product.likes}}</span> </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>
+				{% endfor %}
 			</section>
+
+			<!-- <section class="products">
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product1.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product2.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like active"> <i class="fa fa-heart"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list active"> <i class="fa fa-check-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product3.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product4.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like active"> <i class="fa fa-heart"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product5.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product6.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list active"> <i class="fa fa-check-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product7.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product8.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like active"> <i class="fa fa-heart"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list active"> <i class="fa fa-check-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product9.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product10.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like active"> <i class="fa fa-heart"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list active"> <i class="fa fa-check-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product11.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product12.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like active"> <i class="fa fa-heart"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list active"> <i class="fa fa-check-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product13.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product14.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like active"> <i class="fa fa-heart"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list active"> <i class="fa fa-check-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product15.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like"> <i class="fa fa-heart-o"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+				<div class="product-wrapper">			
+					<article class="product">
+						<div class="product-image">
+							<img src="/img/products/product16.jpg">
+						</div>
+						<div class="product-info">
+							<div class="title">Amanecer</div>
+							<div class="price">$15.00</div>
+						</div>
+						<div class="product-social">
+							<div class="like">
+								<span class="button-like active"> <i class="fa fa-heart"></i> 2,3k </span>
+							</div>
+							<div class="wish-list">
+								<span class="button-wish-list active"> <i class="fa fa-check-square-o"></i> 500 </span>
+							</div>
+						</div>
+					</article>
+				</div>	
+			</section> -->
+
 		</div>
 	</div>
 
@@ -251,23 +582,25 @@
 
 
 	<script type="text/template" id="product-template">
-		<article class="product">
-			<div class="product-image">
-				<img src="/img/products/product1.jpg">
-			</div>
-			<div class="product-info">
-				<div class="title"><%= name %></div>
-				<div class="price">$<%= price %></div>
-			</div>
-			<div class="product-social">
-				<div class="like">
-					<span class="button-like"> <i class="fa fa-heart-o"></i> <span><%= likes %></span> </span>
+		<div class="product-wrapper">
+			<article class="product">
+				<div class="product-image">
+					<img src="/img/products/product1.jpg">
 				</div>
-				<div class="wish-list">
-					<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+				<div class="product-info">
+					<div class="title"><%= name %></div>
+					<div class="price">$<%= price %></div>
 				</div>
-			</div>
-		</article>
+				<div class="product-social">
+					<div class="like">
+						<span class="button-like"> <i class="fa fa-heart-o"></i> <span><%= likes %></span> </span>
+					</div>
+					<div class="wish-list">
+						<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+					</div>
+				</div>
+			</article>
+		</div>
 	</script>
 
 	<script>
