--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -197,7 +197,8 @@
 	text-transform uppercase
 	font-family 'Roboto Condensed'
 	&__action
-		padding .5em .75em
+		// padding .5em .75em
+		padding .5em
 		display table-cell
 		&.following
 		&.cancel
