--- a/public/stylus/elements/logos.styl
+++ b/public/stylus/elements/logos.styl
@@ -13,7 +13,8 @@
 		max-width 2rem
 	&__normal
 		// max-width 10rem
-		max-width 15rem
+		// max-width 15rem
+		max-width 14rem
 		display none
 
 @media (min-width mobile-medium)
