--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -39,6 +39,10 @@
 	<div class="works-container">
 		<div class="works-container__filters left js-leftFilters">
 			<div class="filters">
+				<div class="filters__title">Featured</div>
+				<!-- <div class="filter js-category" data-value="{{ category.nameSlugify }}">{{ category.name }}</div> -->
+			</div>
+			<div class="filters">
 				<div class="filters__title">Categorías</div>
 				{% for category in categories %}
 					<div class="filter js-category" data-value="{{ category.nameSlugify }}">{{ category.name }}</div>
@@ -64,42 +68,372 @@
 			<!-- ********************************************************************
 				$ ARTISTS
 			********************************************************************* -->
-			<section class="artists" data-columns>
-
+			<!-- <section class="artists" data-columns> -->
+			<section class="artists">
 				{% for user in users %}
-				<article class="artist">
-					<a class="artist-header" href="#"> 
+				<div class="artist-wrapper">				
+					<article class="artist">
+						<a class="artist-header" href="#"> 
+							<div class="avatar">
+								<img src="/img/artists/artist1.jpg">
+							</div>
+							<div class="info">
+								<p class="high-text" data-size='small'>{{ user.firstname }}</p>
+								<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+							</div>
+						</a>
+						<div class="artist-works">
+							<div class="work work1"></div>
+							<div class="work work2"></div>
+							<div class="work work3"></div>
+							<div class="work work4"></div>
+							<div class="work work5"></div>
+							<div class="work work6"></div>                  
+						</div>
+						<div class="artist-follow">
+						{% if user.following %}
+							<button class="button-liner disabled js-followButton" data-following="true" data-userId="{{ user.id }}" data-size='small'>
+						{% else %}
+							<button class="button-liner js-followButton" data-following="false" data-userId="{{ user.id }}" data-size='small'>
+						{% endif %}
+								<span class="button-liner__action folllow">Seguir</span>
+								<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
+								<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
+								<span class="button-liner__number">13,2k</span>
+							</button>
+						</div>
+					</article>
+				</div>
+				{% endfor %}
+			</section>
+
+			<!-- <section class="artists">
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
 						<div class="avatar">
 							<img src="/img/artists/artist1.jpg">
 						</div>
 						<div class="info">
-							<p class="high-text" data-size='small'>{{ user.firstname }}</p>
+							<p class="high-text" data-size='small'>keri Russell</p>
 							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
 						</div>
 					</a>
 					<div class="artist-works">
-						<div class="work work1"></div>
-						<div class="work work2"></div>
-						<div class="work work3"></div>
-						<div class="work work4"></div>
-						<div class="work work5"></div>
-						<div class="work work6"></div>                  
+							<div class="work work1"></div>
+							<div class="work work2"></div>
+							<div class="work work3"></div>
+							<div class="work work4"></div>
+							<div class="work work5"></div>
+							<div class="work work6"></div>					
 					</div>
 					<div class="artist-follow">
-					{% if user.following %}
-						<button class="button-liner disabled js-followButton" data-following="true" data-userId="{{ user.id }}" data-size='small'>
-					{% else %}
-						<button class="button-liner js-followButton" data-following="false" data-userId="{{ user.id }}" data-size='small'>
-					{% endif %}
-							<span class="button-liner__action folllow">Seguir</span>
-							<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
-							<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
+						<button class="button-liner" data-size='small'>
+							<span class="button-liner__action">Seguir</span>
 							<span class="button-liner__number">13,2k</span>
 						</button>
 					</div>
-				</article>
-				{% endfor %}
-			</section>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist2.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work7"></div>
+							<div class="work work8"></div>
+							<div class="work work9"></div>
+							<div class="work work10"></div>
+							<div class="work work11"></div>
+							<div class="work work12"></div>					
+					</div>
+					<div class="artist-follow">
+						<a class="button-liner disabled" data-size='small' href="#">
+							<span class="button-liner__action"><i class="fa fa-check"></i> Siguiendo</span>
+							<span class="button-liner__number">13,2k</span>
+						</a>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist3.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work1"></div>
+							<div class="work work2"></div>
+							<div class="work work3"></div>
+							<div class="work work4"></div>
+							<div class="work work5"></div>
+							<div class="work work6"></div>					
+					</div>
+					<div class="artist-follow">
+						<div class="button-liner disabled" data-size='small'>
+							<span class="button-liner__action"><i class="fa fa-times-circle"></i> Cancelar</span>
+							<span class="button-liner__number">13,2k</span>
+						</div>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist4.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work7"></div>
+							<div class="work work8"></div>
+							<div class="work work9"></div>
+							<div class="work work10"></div>
+							<div class="work work11"></div>
+							<div class="work work12"></div>					
+					</div>
+					<div class="artist-follow">
+						<button class="button-liner" data-size='small'>
+							<span class="button-liner__action">Seguir</span>
+							<span class="button-liner__number">13,2k</span>
+						</button>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist1.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work1"></div>
+							<div class="work work2"></div>
+							<div class="work work3"></div>
+							<div class="work work4"></div>
+							<div class="work work5"></div>
+							<div class="work work6"></div>					
+					</div>
+					<div class="artist-follow">
+						<button class="button-liner" data-size='small'>
+							<span class="button-liner__action">Seguir</span>
+							<span class="button-liner__number">13,2k</span>
+						</button>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist2.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work7"></div>
+							<div class="work work8"></div>
+							<div class="work work9"></div>
+							<div class="work work10"></div>
+							<div class="work work11"></div>
+							<div class="work work12"></div>					
+					</div>
+					<div class="artist-follow">
+						<a class="button-liner disabled" data-size='small' href="#">
+							<span class="button-liner__action"><i class="fa fa-check"></i> Siguiendo</span>
+							<span class="button-liner__number">13,2k</span>
+						</a>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist3.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work1"></div>
+							<div class="work work2"></div>
+							<div class="work work3"></div>
+							<div class="work work4"></div>
+							<div class="work work5"></div>
+							<div class="work work6"></div>					
+					</div>
+					<div class="artist-follow">
+						<div class="button-liner disabled" data-size='small'>
+							<span class="button-liner__action"><i class="fa fa-times-circle"></i> Cancelar</span>
+							<span class="button-liner__number">13,2k</span>
+						</div>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist4.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work7"></div>
+							<div class="work work8"></div>
+							<div class="work work9"></div>
+							<div class="work work10"></div>
+							<div class="work work11"></div>
+							<div class="work work12"></div>					
+					</div>
+					<div class="artist-follow">
+						<button class="button-liner" data-size='small'>
+							<span class="button-liner__action">Seguir</span>
+							<span class="button-liner__number">13,2k</span>
+						</button>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist1.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work1"></div>
+							<div class="work work2"></div>
+							<div class="work work3"></div>
+							<div class="work work4"></div>
+							<div class="work work5"></div>
+							<div class="work work6"></div>					
+					</div>
+					<div class="artist-follow">
+						<button class="button-liner" data-size='small'>
+							<span class="button-liner__action">Seguir</span>
+							<span class="button-liner__number">13,2k</span>
+						</button>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist2.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work7"></div>
+							<div class="work work8"></div>
+							<div class="work work9"></div>
+							<div class="work work10"></div>
+							<div class="work work11"></div>
+							<div class="work work12"></div>					
+					</div>
+					<div class="artist-follow">
+						<a class="button-liner disabled" data-size='small' href="#">
+							<span class="button-liner__action"><i class="fa fa-check"></i> Siguiendo</span>
+							<span class="button-liner__number">13,2k</span>
+						</a>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist3.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work1"></div>
+							<div class="work work2"></div>
+							<div class="work work3"></div>
+							<div class="work work4"></div>
+							<div class="work work5"></div>
+							<div class="work work6"></div>					
+					</div>
+					<div class="artist-follow">
+						<div class="button-liner disabled" data-size='small'>
+							<span class="button-liner__action"><i class="fa fa-times-circle"></i> Cancelar</span>
+							<span class="button-liner__number">13,2k</span>
+						</div>
+					</div>
+					</article>
+				</div>
+				<div class="artist-wrapper">					
+					<article class="artist">
+					<a class="artist-header" href="#">
+						<div class="avatar">
+							<img src="/img/artists/artist4.jpg">
+						</div>
+						<div class="info">
+							<p class="high-text" data-size='small'>keri Russell</p>
+							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+						</div>
+					</a>
+					<div class="artist-works">
+							<div class="work work7"></div>
+							<div class="work work8"></div>
+							<div class="work work9"></div>
+							<div class="work work10"></div>
+							<div class="work work11"></div>
+							<div class="work work12"></div>					
+					</div>
+					<div class="artist-follow">
+						<button class="button-liner" data-size='small'>
+							<span class="button-liner__action">Seguir</span>
+							<span class="button-liner__number">13,2k</span>
+						</button>
+					</div>
+					</article>
+				</div>
+			</section> -->
+
 		</div>
 	</div>
 
@@ -223,37 +557,39 @@
 
 
 	<script type="text/template" id="artist-template">
-		<article class="artist">
-			<a class="artist-header" href="#">
-			<div class="avatar">
-				<img src="/img/artists/artist1.jpg">
-			</div>
-			<div class="info">
-				<p class="high-text" data-size='small'><%= firstname %></p>
-				<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-			</div>
-			</a>
-			<div class="artist-works">
-				<div class="work work1"></div>
-				<div class="work work2"></div>
-				<div class="work work3"></div>
-				<div class="work work4"></div>
-				<div class="work work5"></div>
-				<div class="work work6"></div>                  
-			</div>
-			<div class="artist-follow">
-			<% if (following) { %>
-				<button class="button-liner disabled js-followButton" data-following="true" data-userId="<%= id %>" data-size='small'>
-			<% } else { %>
-				<button class="button-liner js-followButton" data-following="false" data-userId="<%= id %>" data-size='small'>
-			<% } %>
-					<span class="button-liner__action folllow">Seguir</span>
-					<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
-					<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
-					<span class="button-liner__number">13,2k</span>
-				</button>
-			</div>
-		</article>
+		<div class="artist-wrapper">
+			<article class="artist">
+				<a class="artist-header" href="#">
+				<div class="avatar">
+					<img src="/img/artists/artist1.jpg">
+				</div>
+				<div class="info">
+					<p class="high-text" data-size='small'><%= firstname %></p>
+					<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+				</div>
+				</a>
+				<div class="artist-works">
+					<div class="work work1"></div>
+					<div class="work work2"></div>
+					<div class="work work3"></div>
+					<div class="work work4"></div>
+					<div class="work work5"></div>
+					<div class="work work6"></div>                  
+				</div>
+				<div class="artist-follow">
+				<% if (following) { %>
+					<button class="button-liner disabled js-followButton" data-following="true" data-userId="<%= id %>" data-size='small'>
+				<% } else { %>
+					<button class="button-liner js-followButton" data-following="false" data-userId="<%= id %>" data-size='small'>
+				<% } %>
+						<span class="button-liner__action folllow">Seguir</span>
+						<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
+						<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
+						<span class="button-liner__number">13,2k</span>
+					</button>
+				</div>
+			</article>
+		</div>
 	</script>
 
 	<script>
