--- a/public/css/discover-artists.css
+++ b/public/css/discover-artists.css
@@ -110,7 +110,7 @@ html {
   max-width: 2rem;
 }
 .logo__normal {
-  max-width: 15rem;
+  max-width: 14rem;
   display: none;
 }
 @media (min-width: 350px) {
@@ -267,7 +267,7 @@ html {
   font-family: 'Roboto Condensed';
 }
 .button-liner__action {
-  padding: 0.5em 0.75em;
+  padding: 0.5em;
   display: table-cell;
 }
 .button-liner__action.following,
@@ -498,17 +498,16 @@ html {
   -ms-transition: -ms-transform 0.5s;
   transition: transform 0.5s;
   z-index: 1;
-  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
-  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
-  border: 1px solid #eee;
+  margin: 1rem;
+  border: solid 1px #ddd;
 }
 .works-container__filters.right {
   right: 0;
-  -webkit-transform: translate(100%, 0);
-  -moz-transform: translate(100%, 0);
-  -o-transform: translate(100%, 0);
-  -ms-transform: translate(100%, 0);
-  transform: translate(100%, 0);
+  -webkit-transform: translate(120%, 0);
+  -moz-transform: translate(120%, 0);
+  -o-transform: translate(120%, 0);
+  -ms-transform: translate(120%, 0);
+  transform: translate(120%, 0);
 }
 .works-container__filters.right.visible {
   -webkit-transform: translate(0%, 0);
@@ -519,11 +518,11 @@ html {
 }
 .works-container__filters.left {
   left: 0;
-  -webkit-transform: translate(-100%, 0);
-  -moz-transform: translate(-100%, 0);
-  -o-transform: translate(-100%, 0);
-  -ms-transform: translate(-100%, 0);
-  transform: translate(-100%, 0);
+  -webkit-transform: translate(-120%, 0);
+  -moz-transform: translate(-120%, 0);
+  -o-transform: translate(-120%, 0);
+  -ms-transform: translate(-120%, 0);
+  transform: translate(-120%, 0);
 }
 .works-container__filters.left.visible {
   -webkit-transform: translate(0%, 0);
@@ -533,13 +532,6 @@ html {
   transform: translate(0%, 0);
 }
 @media (min-width: 1100px) {
-  .works-container__works {
-    -webkit-transition: padding 0.5s;
-    -moz-transition: padding 0.5s;
-    -o-transition: padding 0.5s;
-    -ms-transition: padding 0.5s;
-    transition: padding 0.5s;
-  }
   .works-container__works.moveLeft {
     padding-left: 10rem;
   }
@@ -548,8 +540,6 @@ html {
   }
 }
 .filters {
-  margin: 1rem;
-  border: solid 1px #ddd;
   font-family: 'Raleway';
   font-size: 0.85rem;
   width: 9rem;
@@ -558,24 +548,34 @@ html {
   padding: 0.5rem 1rem;
   font-weight: 600;
   border-bottom: solid 1px #ddd;
+  -webkit-box-shadow: inset 0 -1px 0 #fff, 0 2px 6px #eee;
+  box-shadow: inset 0 -1px 0 #fff, 0 2px 6px #eee;
+  background-image: -webkit-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -moz-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -o-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -ms-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: linear-gradient(to bottom, #fff 0, #f6f6f6 100%);
+}
+.filters:not(:first-child) {
+  border-top: solid 1px #ddd;
 }
 .filters .filter {
   padding: 0.5rem 1rem;
   cursor: pointer;
 }
 .filters .filter.selected {
-  background: rgba(0,0,0,0.1);
+  background: #ededed;
 }
 .filters__price {
   padding: 1rem 0.5rem;
 }
 .artists {
-  padding: 0 0.5rem;
-  overflow: hidden;
-  min-height: 700px;
+  margin: 0.5rem;
+}
+.artist-wrapper {
+  padding: 0.5rem;
 }
 .artist {
-  margin: 1rem 0.5rem;
   border: 1px solid #ddd;
   -webkit-transition: box-shadow ease-in-out 125ms;
   -moz-transition: box-shadow ease-in-out 125ms;
@@ -600,7 +600,7 @@ html {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  max-width: 56.25px;
+  max-width: 3.75rem;
   padding: 0.5em;
 }
 .artist .artist-header .avatar img {
@@ -647,11 +647,11 @@ html {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  height: 75px;
+  height: 80px;
   background-position: center center;
 }
 .artist .artist-follow {
-  padding: 1em;
+  padding: 1em 0.5rem;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -669,48 +669,97 @@ html {
   -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
   box-shadow: rgba(0,0,0,0.35) 0 0 10px;
 }
-@media screen and (min-width: 226px) and (max-width: 450px) {
-  .artists[data-columns]::before {
-    content: '1 .column.size-1of1';
+@media screen and (min-width: 360px) {
+  .artists {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -o-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .artists .artist-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 50%;
+    -ms-flex: 1 50%;
+    flex: 1 50%;
+    max-width: 50%;
   }
 }
-@media screen and (min-width: 451px) and (max-width: 675px) {
-  .artists[data-columns]::before {
-    content: '2 .column.size-1of2';
+@media screen and (min-width: 540px) {
+  .artists .artist-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 33.333%;
+    -ms-flex: 1 33.333%;
+    flex: 1 33.333%;
+    max-width: 33.333%;
   }
 }
-@media screen and (min-width: 676px) and (max-width: 900px) {
-  .artists[data-columns]::before {
-    content: '3 .column.size-1of3';
+@media screen and (min-width: 720px) {
+  .artists .artist-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 25%;
+    -ms-flex: 1 25%;
+    flex: 1 25%;
+    max-width: 25%;
   }
 }
-@media screen and (min-width: 901px) and (max-width: 1125px) {
-  .artists[data-columns]::before {
-    content: '4 .column.size-1of4';
+@media screen and (min-width: 900px) {
+  .artists .artist-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 20%;
+    -ms-flex: 1 20%;
+    flex: 1 20%;
+    max-width: 20%;
   }
-}
-@media screen and (min-width: 1126px) {
-  .artists[data-columns]::before {
-    content: '5 .column.size-1of5';
+  .artists.smallLeft .artist-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 25%;
+    -ms-flex: 1 25%;
+    flex: 1 25%;
+    max-width: 25%;
   }
-}
-.column {
-  float: left;
-}
-.size-1of1 {
-  width: 100%;
-}
-.size-1of2 {
-  width: 50%;
-}
-.size-1of3 {
-  width: 33.333333333333336%;
-}
-.size-1of4 {
-  width: 25%;
-}
-.size-1of5 {
-  width: 20%;
+  .artists.smallRight .artist-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 25%;
+    -ms-flex: 1 25%;
+    flex: 1 25%;
+    max-width: 25%;
+  }
+  .artists.smallLeft.smallRight .artist-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 33.333%;
+    -ms-flex: 1 33.333%;
+    flex: 1 33.333%;
+    max-width: 33.333%;
+  }
 }
 .work1 {
   background-image: url("../img/works/obra1.jpg");
