--- a/public/css/discover-works.css
+++ b/public/css/discover-works.css
@@ -173,7 +173,7 @@ html {
   font-family: 'Roboto Condensed';
 }
 .button-liner__action {
-  padding: 0.5em 0.75em;
+  padding: 0.5em;
   display: table-cell;
 }
 .button-liner__action.following,
@@ -230,7 +230,7 @@ html {
   max-width: 2rem;
 }
 .logo__normal {
-  max-width: 15rem;
+  max-width: 14rem;
   display: none;
 }
 @media (min-width: 350px) {
@@ -720,17 +720,16 @@ html {
   -ms-transition: -ms-transform 0.5s;
   transition: transform 0.5s;
   z-index: 1;
-  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
-  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
-  border: 1px solid #eee;
+  margin: 1rem;
+  border: solid 1px #ddd;
 }
 .works-container__filters.right {
   right: 0;
-  -webkit-transform: translate(100%, 0);
-  -moz-transform: translate(100%, 0);
-  -o-transform: translate(100%, 0);
-  -ms-transform: translate(100%, 0);
-  transform: translate(100%, 0);
+  -webkit-transform: translate(120%, 0);
+  -moz-transform: translate(120%, 0);
+  -o-transform: translate(120%, 0);
+  -ms-transform: translate(120%, 0);
+  transform: translate(120%, 0);
 }
 .works-container__filters.right.visible {
   -webkit-transform: translate(0%, 0);
@@ -741,11 +740,11 @@ html {
 }
 .works-container__filters.left {
   left: 0;
-  -webkit-transform: translate(-100%, 0);
-  -moz-transform: translate(-100%, 0);
-  -o-transform: translate(-100%, 0);
-  -ms-transform: translate(-100%, 0);
-  transform: translate(-100%, 0);
+  -webkit-transform: translate(-120%, 0);
+  -moz-transform: translate(-120%, 0);
+  -o-transform: translate(-120%, 0);
+  -ms-transform: translate(-120%, 0);
+  transform: translate(-120%, 0);
 }
 .works-container__filters.left.visible {
   -webkit-transform: translate(0%, 0);
@@ -755,13 +754,6 @@ html {
   transform: translate(0%, 0);
 }
 @media (min-width: 1100px) {
-  .works-container__works {
-    -webkit-transition: padding 0.5s;
-    -moz-transition: padding 0.5s;
-    -o-transition: padding 0.5s;
-    -ms-transition: padding 0.5s;
-    transition: padding 0.5s;
-  }
   .works-container__works.moveLeft {
     padding-left: 10rem;
   }
@@ -770,8 +762,6 @@ html {
   }
 }
 .filters {
-  margin: 1rem;
-  border: solid 1px #ddd;
   font-family: 'Raleway';
   font-size: 0.85rem;
   width: 9rem;
@@ -780,13 +770,23 @@ html {
   padding: 0.5rem 1rem;
   font-weight: 600;
   border-bottom: solid 1px #ddd;
+  -webkit-box-shadow: inset 0 -1px 0 #fff, 0 2px 6px #eee;
+  box-shadow: inset 0 -1px 0 #fff, 0 2px 6px #eee;
+  background-image: -webkit-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -moz-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -o-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -ms-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: linear-gradient(to bottom, #fff 0, #f6f6f6 100%);
+}
+.filters:not(:first-child) {
+  border-top: solid 1px #ddd;
 }
 .filters .filter {
   padding: 0.5rem 1rem;
   cursor: pointer;
 }
 .filters .filter.selected {
-  background: rgba(0,0,0,0.1);
+  background: #ededed;
 }
 .filters__price {
   padding: 1rem 0.5rem;
