--- a/public/stylus/objects/filters.styl
+++ b/public/stylus/objects/filters.styl
@@ -50,27 +50,35 @@
 		background white
 		transition transform .5s
 		z-index 1
-		box-shadow rgba(0,0,0,0.35) 0 0 10px
-		border 1px solid #eee
+		// padding 1rem
+		margin 1rem
+		// box-shadow rgba(0,0,0, .25) 0 0 10px
+		// box-shadow rgba(0,0,0,0.35) 0 0 5px
+		// box-shadow rgba(#56e9ff, 0.35) 0 0 10px
 		
+		// border 1px solid #eee
+		border solid 1px #ddd
 		&.right
 			right 0
-			transform translate(100%, 0)
+			transform translate(120%, 0)
 			&.visible
 				transform translate(0%, 0)
 		&.left
 			left 0
-			transform translate(-100%, 0)
+			transform translate(-120%, 0)
 			&.visible
 				transform translate(0%, 0)
 				
 @media (min-width: max-width)
 	.works-container
 		&__works
-			transition padding .5s
+			// transition padding .5s
+			// transition padding ease-in-out .5s
 			&.moveLeft
+				// padding-left 12rem
 				padding-left 10rem
 			&.moveRight
+				// padding-right 12rem
 				padding-right 10rem
 		// &__works.moveLeft.moveRight
 			// font-size .7rem
@@ -80,8 +88,6 @@
 	$ FILTERS
 *------------------------------------*/
 .filters
-	margin 1rem
-	border solid 1px #ddd
 	font-family 'Raleway'
 	font-size .85rem
 	width 9rem
@@ -89,10 +95,21 @@
 		padding .5rem 1rem
 		font-weight 600
 		border-bottom solid 1px #ddd
+		box-shadow: inset 0 -1px 0 #fff,0 2px 6px #eee;
+		background-image: linear-gradient(top,#fff 0,#f6f6f6 100%);
+	&:not(:first-child)
+		border-top solid 1px #ddd
+			
 	.filter
 		padding .5rem 1rem
 		cursor pointer
 		&.selected
-			background rgba(black, .1)
+			// background rgba(black, .1)
+			// color #f54545
+			// background rgba(#56e9ff, .3)
+			// background rgba(#3000ff, .3)
+			background: rgb(237, 237, 237);
+			// background rgba(#f54545, .5)
+				
 	&__price
 		padding 1rem .5rem
