--- a/public/stylus/objects/filters.styl
+++ b/public/stylus/objects/filters.styl
@@ -112,4 +112,8 @@
 			// background rgba(#f54545, .5)
 				
 	&__price
+	&__fueatured
 		padding 1rem .5rem
+	&__fueatured
+		display flex
+		align-items center
