--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -39,6 +39,13 @@
 	<div class="works-container">
 		<div class="works-container__filters left js-leftFilters">
 			<div class="filters">
+				<div class="filters__title">Featured</div>
+				<div class="filters__fueatured">
+					<input name="question" type="checkbox" id="question">
+					<label for="question" class="">Recomendadas</label>
+				</div>
+			</div>
+			<div class="filters">
 				<div class="filters__title">Categorías</div>
 				{% for category in categories %}
 					<div class="filter js-category" data-value="{{ category.nameSlugify }}">{{ category.name }}</div>
@@ -68,6 +75,11 @@
 				{% for work in works %}
 					<a href="#" class="work">
 						<img src="{{work.photo}}">
+						    {% if work.featured %}
+                    <button id="{{ work.id }}" class="unfeatured">Unfeatured</button>
+                {% else %}
+                    <button id="{{ work.id }}" class="featured">Featured</button>
+                {% endif %}
 					</a>
 				{% endfor %}
 			<!-- 
@@ -262,5 +274,42 @@
 	<script src="/js/lib/login.js"></script>
 	<script src="/js/lib/filters.js"></script>
 	<script src="/js/discover-works.js"></script>
+
+	<script>
+        $(document).on("click", ".featured", function (event) {
+            var scope = $(this);
+            $.ajax({
+                type: "POST",
+                url: "/user/work/featured/",
+                data: {idWork: scope.attr('id')},
+                success: function (data) {
+                    if (data.code == 202) {
+                        // scope.parent().find('.featuredlogo').show();
+                        scope.text('Unfeatured');
+                        scope.removeClass('featured').addClass('unfeatured');
+                    }
+                    console.log(data);
+                }
+            });
+            return false;
+        });
+        $(document).on("click", ".unfeatured", function (event) {
+            var scope = $(this);
+            $.ajax({
+                type: "POST",
+                url: "/user/work/unfeatured/",
+                data: {idWork: scope.attr('id')},
+                success: function (data) {
+                    if (data.code == 202) {
+                        // scope.parent().find('.featuredlogo').hide();
+                        scope.text('Featured');
+                        scope.removeClass('unfeatured').addClass('featured');
+                    }
+                    console.log(data);
+                }
+            });
+            return false;
+        });
+	</script>
 
 {% endblock %}
