--- a/public/css/market.css
+++ b/public/css/market.css
@@ -566,11 +566,25 @@ html {
 .filters .filter.selected {
   background: #ededed;
 }
-.filters__price {
+.filters__price,
+.filters__fueatured {
   padding: 1rem 0.5rem;
 }
+.filters__fueatured {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
 .products {
-  min-height: 500px;
   margin: 0.5rem;
 }
 .product-wrapper {
